# pyanylist

./: convert.py  messages.proto  pyproject.toml
.github/workflows/: publish.yml
src/anylist/: client.py  common.py  credentials.py  model.py  shopping_list.py  shopping_list_item.py
